# wherenver

./: Cargo.toml  flake.nix
src/: cli.rs  main.rs
src/shell/: hook.bash  hook.fish  mod.rs
